5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4171/executions/1595_1014.log
== TEST (2019-03-21 16:52:21) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

totalvendas = int(input("total de vendas: "))
lucro = (totalvendas/100)*30

print(lucro)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    totalvendas = int(input())
ValueError: invalid literal for int() with base 10: '700.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 16:52:23) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

totalvendas = int(input("total de vendas: "))
lucro = (totalvendas/100)*30

print(lucro)
-- EXECUTION TIME:
0.202973
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1014/main.py", line 5, in <module>
    totalvendas = int(input())
ValueError: invalid literal for int() with base 10: '700.50'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 16:52:34) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

totalvendas = int(input("total de vendas: "))
lucro = (totalvendas/100)*30

print(round(lucro,2)
-- EXECUTION TIME:
0.166958
-- ERROR:
  File "/home/codebench/codes/1595/1014/main.py", line 9
    
                        ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 16:52:36) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

totalvendas = int(input("total de vendas: "))
lucro = (totalvendas/100)*30

print(round(lucro,2)
-- EXECUTION TIME:
0.207219
-- ERROR:
  File "/home/codebench/codes/1595/1014/main.py", line 9
    
                        ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 16:52:37) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

totalvendas = int(input("total de vendas: "))
lucro = (totalvendas/100)*30

print(round(lucro,2))
-- EXECUTION TIME:
0.113478
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1014/main.py", line 5, in <module>
    totalvendas = int(input())
ValueError: invalid literal for int() with base 10: '700.50'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:52:38) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

totalvendas = int(input("total de vendas: "))
lucro = (totalvendas/100)*30

print(round(lucro,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    totalvendas = int(input())
ValueError: invalid literal for int() with base 10: '700.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 16:52:52) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

totalvendas = float(input("total de vendas: "))
lucro = (totalvendas/100)*30

print(round(lucro,2))
-- EXECUTION TIME:
0.138062
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:
210.15
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
